changed to [15 3]